# fred.rs

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  contributors.md  index.html  search-index.js
.circleci/: config.yml
.github/: CODEOWNERS
boxfnonce/: SendBoxFnOnce.t.html  index.html  sidebar-items.js  struct.BoxFnOnce.html  struct.SendBoxFnOnce.html
bytes/: enum.BigEndian.html  enum.LittleEndian.html  index.html  struct.Bytes.html  struct.BytesMut.html  trait.Buf.html  trait.BufMut.html  trait.ByteOrder.html  trait.IntoBuf.html
crc16/: ARC.t.html  AUG_CCITT.t.html  BUYPASS.t.html  CCITT_FALSE.t.html  CDMA2000.t.html  CRC_A.t.html  CrcType.t.html  DDS_110.t.html  DECT_R.t.html  DECT_X.t.html  DNP.t.html  EN_13757.t.html  GENIBUS.t.html  KERMIT.t.html  MAXIM.t.html  MCRF4XX.t.html  MODBUS.t.html  RIELLO.t.html  T10_DIF.t.html  TELEDISK.t.html  TMS37157.t.html  USB.t.html  XMODEM.t.html  X_25.t.html  enum.ARC.html  enum.AUG_CCITT.html  enum.BUYPASS.html  enum.CCITT_FALSE.html  enum.CDMA2000.html  enum.CRC_A.html  enum.DDS_110.html  enum.DECT_R.html  enum.DECT_X.html  enum.DNP.html  enum.EN_13757.html  enum.GENIBUS.html  enum.KERMIT.html  enum.MAXIM.html  enum.MCRF4XX.html  enum.MODBUS.html  (+11 more)
examples/: README.md  basic.rs  cluster.rs  http.rs  list.rs  multiple.rs  pubsub.rs  reconnect.rs  replay_requests.rs  sync_borrowed.rs  sync_owned.rs  tls.rs
fred/: Cargo.toml  RedisClient.t.html  index.html  sidebar-items.js  struct.RedisClient.html
fred-types/: Cargo.toml
fred-types/src/: error.rs  lib.rs  types.rs  utils.rs
fred/src/: client.rs  (+5 more)
futures/: enum.Async.html  enum.AsyncSink.html  index.html  macro.task_local.html  macro.try_ready.html  type.Poll.html  type.StartSend.html
iovec/: constant.MAX_LENGTH.html  index.html  struct.IoVec.html
lazycell/: index.html  struct.AtomicLazyCell.html  struct.LazyCell.html
libc/: fn.glob64.html  fn.pthread_key_create.html
log/: trait.Log.html
mio/: index.html  struct.Events.html  struct.Poll.html  struct.PollOpt.html  struct.Ready.html  struct.Registration.html  struct.SetReadiness.html  struct.Token.html
net2/: index.html  struct.TcpBuilder.html  struct.UdpBuilder.html  trait.TcpListenerExt.html  trait.TcpStreamExt.html  trait.UdpSocketExt.html
owning_ref/: index.html  struct.OwningHandle.html  struct.OwningRef.html  struct.OwningRefMut.html  trait.CloneStableAddress.html  trait.Erased.html  trait.IntoErased.html  trait.StableAddress.html  trait.ToHandle.html  trait.ToHandleMut.html  type.ArcRef.html  type.BoxRef.html  type.BoxRefMut.html  type.ErasedArcRef.html  type.ErasedBoxRef.html  type.ErasedBoxRefMut.html  type.ErasedRcRef.html  type.MutexGuardRef.html  type.MutexGuardRefMut.html  type.RcRef.html  type.RefMutRef.html  type.RefMutRefMut.html  type.RefRef.html  type.RwLockReadGuardRef.html  type.RwLockWriteGuardRef.html  type.RwLockWriteGuardRefMut.html  type.StringRef.html  type.StringRefMut.html  type.VecRef.html  type.VecRefMut.html
parking_lot/: constant.ONCE_INIT.html  enum.OnceState.html  index.html  sidebar-items.js  struct.Condvar.html  struct.Mutex.html  struct.MutexGuard.html  struct.Once.html  struct.ReentrantMutex.html  struct.ReentrantMutexGuard.html  struct.RwLock.html  struct.RwLockReadGuard.html  struct.RwLockWriteGuard.html  struct.WaitTimeoutResult.html  type.MutexGuardRef.html  type.ReentrantMutexGuardRef.html  type.RwLockReadGuardRef.html  type.RwLockWriteGuardRef.html
parking_lot_core/: constant.DEFAULT_PARK_TOKEN.html  constant.DEFAULT_UNPARK_TOKEN.html  enum.FilterOp.html  enum.ParkResult.html  enum.RequeueOp.html  fn.park.html  fn.unpark_all.html  fn.unpark_filter.html  fn.unpark_one.html  fn.unpark_requeue.html  index.html  struct.ParkToken.html  struct.SpinWait.html  struct.UnparkResult.html  struct.UnparkToken.html
pretty_env_logger/: fn.init.html  index.html  sidebar-items.js
scoped_tls/: index.html  macro.scoped_thread_local.html  struct.ScopedKey.html
slab/: index.html  struct.Entry.html  struct.Iter.html  struct.IterMut.html  struct.Slab.html  struct.VacantEntry.html
smallvec/: index.html  sidebar-items.js  struct.Drain.html  struct.IntoIter.html  struct.SmallVec.html  trait.Array.html  trait.ExtendFromSlice.html  trait.VecLike.html  type.SmallVec1.html  type.SmallVec16.html  type.SmallVec2.html  type.SmallVec24.html  type.SmallVec32.html  type.SmallVec4.html  type.SmallVec8.html
src/: async_ng.rs  borrowed.rs  client.rs  commands.rs  error.rs  lib.rs  owned.rs  pool.rs  types.rs  utils.rs
stable_deref_trait/: index.html  trait.CloneStableDeref.html  trait.StableDeref.html
take/: index.html  struct.Take.html
tests/: README.md  lib.rs
tokio_core/: index.html  macro.try_nb.html
tokio_io/: index.html  macro.try_nb.html  trait.AsyncRead.html  trait.AsyncWrite.html  type.IoFuture.html  type.IoStream.html
tokio_proto/: index.html  struct.Connect.html  struct.TcpClient.html  struct.TcpServer.html  trait.BindClient.html  trait.BindServer.html
(+816 files in other folders)
