[package]
authors = [
  "Alec Embke <aembke@gmail.com>",
  "Howard Lin <linnyflow@gmail.com>",
  "Evan Milton <evan@azuqua.com>",
  "Kevin Wilson <kevinwilson541@gmail.com>",
  "Jeremy Crowe <crowe.jb@gmail.com>"
]
name = "fred"
version = "0.1.8"
description = "A Redis client for Rust built on Futures and Tokio."
readme = "README.md"
repository = "https://github.com/azuqua/fred.rs"
homepage = "https://github.com/azuqua/fred.rs"
keywords = ["redis", "futures", "async", "cluster", "tokio"]
license = "MIT"

[badges]
travis-ci = { repository = "azuqua/fred.rs", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
bytes = "0.4.4"
pretty_env_logger = "0.1"
futures = "0.1.18"
parking_lot = "0.4.4"
tokio-core = "0.1.8"
tokio-io = "0.1"
tokio-proto = "0.1"
url = "1.5"
crc16 = "0.3"
log = "0.3"
boxfnonce = "0.0.3"
flame = "0.2"
chrono = "0.4"
native-tls = { version = "0.1", optional = true }
tokio-tls = { version = "0.1", optional = true, features = ["tokio-proto"] }

[dependencies.tokio-timer]
git = "https://github.com/azuqua/tokio-timer"
branch = "master"

# comment/uncomment these to toggle fuzzing
# [dependencies.afl]
# version = "0.1"
# [dependencies.afl-plugin]
# version = "0.1"

[dev-dependencies]
rand = "0.3"
hyper = "0.11"

[lib]
doc = true
doctest = false
name = "fred"
test = true

[features]
default = ["sync", "metrics", "ignore-auth-error"]
sync = []
fuzz = []
enable-flame = []
metrics = []
mock = []
ignore-auth-error = []
enable-tls = ["native-tls", "tokio-tls"]

[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
lto = false
opt-level = 3
rpath = false
