[package]
name = "fred"
version = "2.1.1"
authors = ["Alec Embke <aembke@gmail.com>"]
edition = "2018"
description = "A Redis client for Rust built on Futures and Tokio."
readme = "README.md"
repository = "https://github.com/azuqua/fred.rs"
homepage = "https://github.com/azuqua/fred.rs"
keywords = ["redis", "futures", "async", "cluster", "tokio"]
license = "MIT"

[badges]
travis-ci = { repository = "azuqua/fred.rs", branch = "master" }
maintenance = { status = "actively-developed" }


[dependencies]
futures = "0.1"
parking_lot = "0.7.0"
lazy_static = "1.3.0"
bytes = "0.4.11"
redis-protocol = "0.1.2"
log = "0.4.6"
pretty_env_logger = "0.3"
url = "1.7.2"
float-cmp = "0.4.0"
native-tls = { version = "0.2", optional = true }
tokio-tls = { version = "0.2", optional = true }
tokio-timer-patched = "0.1.3"
tokio-core = "0.1.17"
tokio-proto = "0.1.1"
tokio-io = "0.1.12"
rand = "0.3"

[dev-dependencies]
hyper = "0.11"

[lib]
doc = true
doctest = false
name = "fred"
test = true

[features]
default = ["ignore-auth-error"]
ignore-auth-error = []
enable-tls = ["native-tls", "tokio-tls"]
mocks = []
super-duper-bad-networking = []
reconnect-on-auth-error = []
